[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Felipe Kummer <felipe.s.kummer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.0"
pylint = "^3.1.0"
requests = "^2.31.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
